# greendish

./: .env.example  .gitignore  CLAUDE.md  PHASE6-9_SUMMARY.md  PHASE_1_SETUP.md  PHASE_3_PLAN.md  PHASE_3_SUMMARY.md  PHASE_6_8_PLAN.md  PHASE_WISE_PLAN.MD  README.md  SOLUTION_PLAN.md  docker-compose.yml  project_task.txt  test_ocr.py
api/: Dockerfile  __init__.py  config.py  main.py  pyproject.toml  requirements.txt
api/agents/: __init__.py  menu_processor.py  state.py  utils.py
api/agents/nodes/: __init__.py  calculator_node.py  classifier_node.py  rag_node.py
api/data/: vegetarian_db.json  vegetarian_keywords.json
api/llm/: __init__.py  groq_client.py  openrouter_client.py  router_client.py  types.py
api/models/: __init__.py  schemas.py
api/routers/: __init__.py  menu.py  rag.py
api/services/: __init__.py  keyword_classifier.py  llm_batch_classifier.py  mcp_client.py  ocr_service.py  parser_service.py  rag_service.py
docs/: SOLUTION_PLAN.md  architecture.md
docs/phases/: PHASE_1_SETUP.md  PHASE_6_8_PLAN.md
mcp-server/: Dockerfile  __init__.py  config.py  models.py  pyproject.toml  server.py
mcp-server/tools/: calculator.py
streamlit-ui/: .env.example  Dockerfile  app.py  config.py  pyproject.toml  requirements.txt  ui_config.py
streamlit-ui/pages/: 1_LLM_Chat.py  1_OpenRouter_Chat.py  2_Parser_Test.py  3_RAG_Retrieval.py
tests/api/: test_ai_rag_integration.py  test_menu_modes.py  test_menu_processor_agent.py  test_rag_router.py
tests/mcp/: test_calculator.py
tests/services/: test_keyword_classifier.py
