[project]
name = "convergefi-api"
version = "0.1.0"
description = "ConvergeFi REST API service for menu analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pillow",
    "pytesseract",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "python-dotenv",
    "httpx",
    "mcp[cli]",
    "openai",
    "langchain",
    "langchain-openai",
    "langsmith",
    "chromadb",
    "sentence-transformers",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]
