[project]
name = "convergefi-api"
version = "0.1.0"
description = "ConvergeFi REST API service for menu analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pillow",
    "pytesseract",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "python-dotenv",
    "httpx",
    "mcp[cli]",
    "langchain-core>=0.3.22,<0.4.0",
    "langchain>=0.3.7,<0.4.0",
    "langsmith>=0.1.126,<0.4.0",
    "langgraph>=0.2.74,<0.3.0",
    "chromadb",
    "sentence-transformers",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]
