[project]
name = "convergefi-mcp-server"
version = "0.1.0"
description = "ConvergeFi MCP server for calculation and RAG services"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "python-dotenv",
    "chromadb",
    "sentence-transformers",
    "httpx",
    "mcp[cli]",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]
